Namespace alignment fixes

--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -54,6 +54,14 @@ h3
     display: flex
     align-items: center
 
+.empty-state
+  font-style: italic
+  color: lighten($color-table, 28%)
+  background: lighten($color-table, 61%)
+  border: 0.1em solid lighten($color-table, 58%)
+  border-radius: 0.2em
+  padding: 1em
+
 .margin-top30
   margin-top: 30px
 
